<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:id="@+id/layoutMenuSign"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/menubox"
        android:orientation="vertical"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/setNameSign"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="5dp"
            android:ems="10"
            android:hint="@string/Name"
            app:hintTextColor="@color/parakeet"
            app:boxStrokeColor="@color/parakeet"
            app:counterMaxLength="25">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/setNameSignText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPersonName" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/setLastNameSign"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="5dp"
            android:ems="10"
            android:hint="@string/LastName"
            app:hintTextColor="@color/parakeet"
            app:boxStrokeColor="@color/parakeet"
            app:counterMaxLength="25">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/setLastNameSignText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPersonName" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/setPhoneSign"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="5dp"
            android:ems="10"
            android:hint="@string/Phone"
            app:hintTextColor="@color/parakeet"
            app:boxStrokeColor="@color/parakeet"
            app:helperTextEnabled="true"
            app:helperText="@string/PhoneHelper">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/setPhoneSignText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/setEmailSign"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="5dp"
            android:ems="10"
            android:hint="@string/Email"
            app:hintTextColor="@color/parakeet"
            app:boxStrokeColor="@color/parakeet"
            app:counterMaxLength="35">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/setEmailSignText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/setPasswordSign"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="5dp"
            android:hint="@string/Password"
            app:helperTextEnabled="true"
            app:helperText="@string/PasswordHelper"
            app:hintTextColor="@color/parakeet"
            app:boxStrokeColor="@color/parakeet">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/setPasswordSignText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/setRepeatPasswordSign"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="5dp"
            android:hint="@string/PasswordRepeat"
            app:hintTextColor="@color/parakeet"
            app:boxStrokeColor="@color/parakeet">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/setRepeatPasswordSignText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <CheckBox
            android:id="@+id/cbxTermOfServices"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="5dp"
            android:text="@string/Services"
            android:textAlignment="textStart"
            android:textColor="@color/parakeet"
            android:textSize="12sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSignUpSU"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/buttongreen"
            android:onClick="signUp"
            android:text="@string/Sign"
            android:textAlignment="center" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/Or"
            android:textAlignment="center" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnLoginSU"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/buttonwhite"
            android:onClick="login"
            android:text="@string/Login"
            android:textAlignment="center" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>