<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@drawable/background"
tools:context=".MyAccountActivity">
    <ImageView
        android:id="@+id/imgBackCarsEdit"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/angle_left" />
    <LinearLayout
        android:id="@+id/layoutMenuSign"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/menubox"
        android:orientation="vertical"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/setNameSign"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="5dp"
            android:ems="10"
            android:hint="@string/Name"
            app:hintTextColor="@color/parakeet"
            app:boxStrokeColor="@color/parakeet"
            app:counterMaxLength="25">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/setNameSignText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPersonName" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/setLastNameSign"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="5dp"
            android:ems="10"
            android:hint="@string/LastName"
            app:hintTextColor="@color/parakeet"
            app:boxStrokeColor="@color/parakeet"
            app:counterMaxLength="25">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/setLastNameSignText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPersonName" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/setPhoneSign"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="5dp"
            android:ems="10"
            android:hint="@string/Phone"
            app:hintTextColor="@color/parakeet"
            app:boxStrokeColor="@color/parakeet"
            app:helperTextEnabled="true"
            app:helperText="@string/PhoneHelper">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/setPhoneSignText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="phone" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/setEmailSign"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="5dp"
            android:ems="10"
            android:hint="@string/Email"
            app:hintTextColor="@color/parakeet"
            app:boxStrokeColor="@color/parakeet"
            app:counterMaxLength="35">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/setEmailSignText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/setPasswordSign"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="5dp"
            android:hint="@string/newPassword"
            app:boxStrokeColor="@color/parakeet"
            app:helperText="@string/PasswordHelper"
            app:helperTextEnabled="true"
            app:hintTextColor="@color/parakeet"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/setPasswordSignText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/setRepeatPasswordSign"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="5dp"
            android:hint="@string/newPasswordRepeat"
            app:hintTextColor="@color/parakeet"
            app:passwordToggleEnabled="true"
            app:boxStrokeColor="@color/parakeet">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/setRepeatPasswordSignText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnEditVehicle"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginHorizontal="10dp"
                android:background="@drawable/buttongreen"
                android:layout_weight="1"
                android:text="@string/editAccount"
                android:textAlignment="center" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnDeleteVehicle"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginHorizontal="10dp"
                android:background="@drawable/buttonred"
                android:layout_weight="1"
                android:text="@string/deleteAccount"
                android:textAlignment="center" />

        </LinearLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>